--- a/colournaming/namebytyping/templates/namebytyping/results.html
+++ b/colournaming/namebytyping/templates/namebytyping/results.html
@@ -1,6 +1,6 @@
 <h1>The Results</h1>
 <ul>
 {% for response in responses %}
-    <li>Colour name: {{response.colour_name}} For image: {{response.image_number}}</li>
+    <li>For <b>Image</b>: {{response.image_number}} <b>Colour Name</b> is: {{response.colour_name}} </li>
 {% endfor %}
 </ul>
