--- a/colournaming/namebytyping/static/namebytyping/style.css
+++ b/colournaming/namebytyping/static/namebytyping/style.css
@@ -1,6 +1,20 @@
 #image {
-  width:45em;
-  height: 25em;
+  width:40em;
+  height: 20em;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.5em;
+}
+
+#timer {
+  width: 40em;
+  height: 2em;
   top: 0;
   left: 0;
   bottom: 0;
@@ -10,6 +24,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Inconsolata', serif;
+  font-size: 24px;
 }
 
 img {
@@ -59,5 +75,13 @@ h4 {
 }
 
 #hidden-textbox {
+  display: none;
+}
+
+#time-tracker {
+  display: none;
+}
+
+#time-setter {
   display: none;
 }
