--- a/colournaming/namebytyping/templates/namebytyping/test.html
+++ b/colournaming/namebytyping/templates/namebytyping/test.html
@@ -2,6 +2,8 @@
   <input type="text" id="time-start" value="{{ time_elapsed }}">
 </div>
 
+<h1>{{ session_key }}</h1>
+
 {% load staticfiles %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'namebytyping/style.css' %}" />
