--- a/colournaming/namebytyping/static/namebytyping/style.css
+++ b/colournaming/namebytyping/static/namebytyping/style.css
@@ -1,10 +1,8 @@
-#image {
-  width:40em;
-  height: 20em;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+.image {
+  width:100%;
+  height: 400px;
+  top: 10px;
+  position: absolute;
   margin: auto;
   display: flex;
   justify-content: center;
@@ -15,11 +13,8 @@
 #timer {
   width: 40em;
   height: 2em;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   margin: auto;
+  margin-top: 400px;
   margin-bottom: 1em;
   display: flex;
   justify-content: center;
@@ -41,6 +36,7 @@ img {
   align-items: center;
   margin:auto;
   margin-bottom: 1em;
+
 }
 
 #submitbutton {
