--- a/colournaming/namebytyping/templates/namebytyping/results.html
+++ b/colournaming/namebytyping/templates/namebytyping/results.html
@@ -1,4 +1,17 @@
 <h1>The Results</h1>
+
+<table border="1">
+
+  {% for i in times %}
+    <tr>
+      <td>
+        {{ i }}
+      </td>
+    </tr>
+  {% endfor %}
+
+</table>
+
 <table border="1">
 {% for i in images_count %}
 
