Database functionality added
Updated database credentials

--- a/colournaming/namebytyping/templates/namebytyping/results.html
+++ b/colournaming/namebytyping/templates/namebytyping/results.html
@@ -17,7 +17,7 @@
 
       <tr>
         <td>{{ i }}</td>
-        <td><img src="../../static/namebytyping/images/{{ i }}.png"></td>
+        <td><img src="../../static/namebytyping/images/{{ i }}.jpg"></td>
         <td>
         {% for response in responses %}
         <ul>
