Added Different Tests and Survey
Users now answer three questions before starting. In addition, the
system checks if the browser supports speech recognition, and has three
different tests configured. Next step is to assign these to users and
alter the database model so that the type of test is saved for the user
and the time it took them.

--- a/colournaming/namebytyping/static/namebytyping/style.css
+++ b/colournaming/namebytyping/static/namebytyping/style.css
@@ -76,9 +76,14 @@
   color:white;
 }
 
-h4 {
+h3, h4 {
   font-family: 'Montserrat', serif;
   font-size: 18px;
+}
+
+h3 {
+  color: #333333;
+  font-style: italic;
 }
 
 .button:hover {
