--- a/colournaming/namebytyping/templates/namebytyping/test_type.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_type.html
@@ -20,7 +20,7 @@
       {% csrf_token %}
 
       <div id="textbox-div">
-        <input type="text" name="colourname" id="textbox" onKeyPress="return submitenter(this,event)" placeholder="Enter Colour Name Here...">
+        <input type="text" name="colourname" id="textbox" onKeyPress="return submitenter(this,event)" placeholder="Start Typing, Press Enter to Submit">
       </div>
 
       <div id="submitbutton" class="button" onclick="this.parentNode.submit()" name="colourname">
