--- a/colournaming/namebytyping/static/namebytyping/style-instructions.css
+++ b/colournaming/namebytyping/static/namebytyping/style-instructions.css
@@ -7,17 +7,21 @@
   box-shadow: 0px 0px 50px #333333;
   background-color: #333333;
   position: relative;
-  top: 50%;
-  transform: translateY(-55%);
+  //top: 50%;
+  //transform: translateY(-55%);
+  margin-top: 30px;
   text-align: center;
 }
 
 .title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: inline-block;
+  text-align: center;
   font-family: 'Montserrat', serif;
   color: white;
+}
+
+.instructions #end-note {
+  font-size: 12px;
 }
 
 .instructions {
@@ -39,7 +43,7 @@
   background-color: #68c4af;
   border-radius: 30px;
   color: white;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 h4 {
