--- a/colournaming/namebytyping/templates/namebytyping/test_speak.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_speak.html
@@ -21,14 +21,18 @@
 
       <div class="si-wrapper" id="textbox-div">
         <h3 id="listen-text">Listening...</h3>
-        <input type="text" class="si-input" name="colourname" id="textbox" style="display:none">
         <button class="si-btn" id="speech-button">
             speech input
             <span class="si-mic"></span>
             <span class="si-holder"></span>
         </button>
+        <input type="text" class="si-input" name="colourname" id="textbox" style="display:none">
       </div>
     <script src="../../static/namebytyping/speech-input-notype.js"></script>
+
+      <div class="button" id="restart-recognition" style="display:none">
+        <h4>Restart Speech Recognition</h4>
+      </div>
 
       <div id="skip-button" class="button" name="colourname">
         <h4>I Can't See The Circle</h4>
