--- a/colournaming/namebytyping/templates/namebytyping/practice.html
+++ b/colournaming/namebytyping/templates/namebytyping/practice.html
@@ -1,5 +1,3 @@
-<h1>{{ session_key }}</h1>
-
 {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static 'namebytyping/style.css' %}" />
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -13,24 +11,27 @@
   <img id="shown-image" src="../../static/namebytyping/images/circled/{{ image_number }}.png"/>
 </div>
 
-<form action="{% url 'namebytyping:submit_speak_type' %}" method="post" id="input-form">
+<form action="{% url 'namebytyping:practice_done' %}" method="post" id="input-form">
       {% csrf_token %}
 
       <div class="si-wrapper" id="textbox-div">
-        <input type="text" class="si-input" name="colourname" id="textbox" onKeyPress="return submitenter(this,event)" placeholder="Listening Stop">
+        <input type="text" class="si-input" name="colourname" id="textbox" onKeyPress="return submitenter(this,event)" placeholder="What's up?">
         <button class="si-btn" id="speech-button">
             speech input
             <span class="si-mic"></span>
             <span class="si-holder"></span>
         </button>
       </div>
-    <script src="../../static/namebytyping/speech-input.js"></script>
+
+      <input type="text" id="happy-to-speak-box" name="happy-to-speak" style="display:none;">
+
+    <script src="../../static/namebytyping/speech-input-practice.js"></script>
       <div id="submitbutton" class="button" onclick="this.parentNode.submit()" name="colourname">
         <h4>Submit</h4>
       </div>
 
-      <div class="button" id="help-button">
-        <h4>I Can't See The Circle</h4>
+      <div class="button" id="unable-to-speak">
+        <h4>I Am Not Able to Use Speech Recognition</h4>
       </div>
 
       <div id="hidden-textbox">
