--- a/colournaming/namebytyping/templates/namebytyping/index.html
+++ b/colournaming/namebytyping/templates/namebytyping/index.html
@@ -15,7 +15,12 @@
          <strong>may</strong> (we will notify you if you can) be able to use
          your computer's microphone to name the colours by speaking them rather
          than having to type them. Before the test starts there are three
-         questions to answer. All of your data is completely anonymous.
+         questions to answer. All of your data is completely anonymous and no
+         voice data from speech recognition is ever recorded - only the words
+         that the computer thinks you said - nor is it possible for voice
+         recognition to be switched on without your express permission. Granting
+         permission to use voice recognition on this website will <b><i>not</i></b>
+         grant permission to any other site.
       </p>
     </div>
   <form action="{% url 'namebytyping:next' %}" method="post">
