--- a/colournaming/namebytyping/templates/namebytyping/test_type_info.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_type_info.html
@@ -7,7 +7,7 @@
     <div class="title"><h1>Typing Test</h1></div>
     <div class="instructions">
       <p>
-         You have been allocated the <strong><i>Typing Test</i></strong>. Your task is
+         This is a <strong><i>Typing Test</i></strong>. Your task is
          to <strong><i>type</i></strong> the name of the colours in the circles,
          <strong><i>no voice recognition</i></strong> will be used. After typing a
          colour name, press enter to submit the answer. If you cannot see the
