--- a/colournaming/namebytyping/templates/namebytyping/test_speak.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_speak.html
@@ -13,31 +13,43 @@
   <img id="shown-image" src="../../static/namebytyping/images/circled/{{ image_number }}.png"/>
 </div>
 
+<div id="interim-results">
+  <span id="interim_span" class="interim"><h4 id="spoken-text"><i>Listening...</i></h4></span>
+</div>
+
 <form action="{% url 'namebytyping:submit_speak' %}" method="post" id="input-form">
       {% csrf_token %}
 
-      <div class="si-wrapper" id="textbox-div">
-        <h3 id="listen-text">Listening...</h3>
+      <div class="buttons-and-mic-container">
+        <div class="buttons-container">
+
+          <div class="button" id="restart-recognition" style="display:none">
+            <h4>Restart Speech Recognition</h4>
+          </div>
+
+          <div id="skip-button" class="button" name="colourname">
+            <h4>I Can't See The Circle</h4>
+          </div>
+
+          <div class="button" id="help-button">
+            <h4>Speech Isn't Working</h4>
+          </div>
+        </div>
+        <div class="mic-container">
+          <img id="listening-mic" src="../../static/namebytyping/images/mic-animate.gif" style="display:none;"/>
+          <img id="stopped-mic" src="../../static/namebytyping/images/mic-slash.gif"/>
+        </div>
+      </div>
+
+      <div class="si-wrapper" id="textbox-div-speakonly">
+            <!--<h3 id="listen-text">Listening...</h3>-->
         <button class="si-btn" id="speech-button">
             speech input
-            <span class="si-mic"></span>
-            <span class="si-holder"></span>
         </button>
         <input type="text" class="si-input" name="colourname" id="textbox" style="display:none">
       </div>
+
     <script src="../../static/namebytyping/speech-input-notype.js"></script>
-
-      <div class="button" id="restart-recognition" style="display:none">
-        <h4>Restart Speech Recognition</h4>
-      </div>
-
-      <div id="skip-button" class="button" name="colourname">
-        <h4>I Can't See The Circle</h4>
-      </div>
-
-      <div class="button" id="help-button">
-        <h4>Speech Isn't Working</h4>
-      </div>
 
       <div id="hidden-textbox">
         <input type="text" name="imagenumber" id="hidden-textbox" value="{{ image_number }}">
