--- a/colournaming/namebytyping/templates/namebytyping/test_type.html
+++ b/colournaming/namebytyping/templates/namebytyping/test_type.html
@@ -20,12 +20,17 @@
         <input type="text" name="colourname" id="textbox" onKeyPress="return submitenter(this,event)" placeholder="Start Typing, Press Enter to Submit">
       </div>
 
-      <div id="submitbutton" class="button" onclick="this.parentNode.submit()" name="colourname">
-        <h4>Submit</h4>
-      </div>
+      <div class="buttons-and-mic-container">
+        <div class="buttons-container">
 
-      <div class="button" id="help-button">
-        <h4>I Can't See The Circle</h4>
+          <div id="submitbutton" class="button" onclick="document.getElementById('input-form').submit();" name="colourname">
+            <h4>Submit</h4>
+          </div>
+
+          <div class="button" id="help-button">
+            <h4>I Can't See The Circle</h4>
+          </div>
+        </div>
       </div>
 
       <div id="hidden-textbox">
